Create homepage structure

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -135,7 +135,7 @@ small, .small {
 /* Pages
 ================================================== */
 .hero {
-    background: #fdd93d;
+    background: #61e6ef;
     padding: 5rem 5rem;
 }
 
